# guitar

./: Cargo.toml  Makefile.toml  README.md
examples/: guitar.rs
src/: convert.rs  fretboard.rs  lib.rs  note.rs  notes.rs  pitch.rs  string.rs  unit.rs  utility.rs
tests/: fretboard.rs
