# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "guitar"
version = "0.1.1"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "A toolkit for string-based instruments"
documentation = "https://docs.rs/guitar"
readme = "README.md"
homepage = "https://github.com/Fuwn/guitar"
repository = "https://github.com/Fuwn/guitar"
license = "GPL-3.0-only"
keywords = ["guitar", "fret", "neck", "bridge"]

# [features]
# default = []

[dependencies]
once_cell = "1.19.0"
